<resources>

    <string name="app_name">Students Henchman</string>

    <!--activities titles-->
    <string name="dashboard_activity_title">Dashboard</string>
    <string name="settings_activity_title">Settings</string>
    <string name="timetable_activity_title">TimeTable</string>
    <string name="subject_details_activity_title">Subject Details</string>
    <string name="qr_scanner_activity_title">QR Scanner</string>

    <!--dni tygodnia-->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <!--lesson widget-->
    <string name="nearest_lesson">Nearest lesson</string>
    <string name="localization">Localization:</string>
    <string name="teacher">Teacher:</string>

    <!--notes-->
    <string name="note_activation_date">Activation date:</string>
    <string name="note_content">Content:</string>
    <string name="add_note">Add note</string>
    <string name="add_activation_date">Add activation date</string>
    <string name="delete_note">Delete note</string>
    <string name="del_note_msg">Are you sure that you can delete the note ?</string>

    <!--menu-->
    <string name="settings">Settings</string>
    <string name="menu_download_label">Download / update:</string>
    <string name="menu_download_settings">Settings</string>
    <string name="menu_download_timetable">Timetable</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_about_app">About App</string>
    <string name="menu_customize_dashboard">Customize dashboard</string>

    <!--settings-->
    <string name="settings_department_label">Department:</string>
    <string name="settings_field_label">Field:</string>
    <string name="settings_specialization_label">Specialization:</string>
    <string name="settings_term_label">Term:</string>
    <string name="settings_type_label">Type:</string>
    <string name="settings_kind_label">Degree:</string>
    <string name="settings_groups_label">Groups:</string>
    <string name="settings_select_groups_button">Select your groups</string>
    <string name="settings_degree_spinner_value_label">Studies %1$d degree</string>

    <!--login-->
    <string name="login_hint_text">Enter your email</string>
    <string name="login_at_least_six_sign">At least 6 sign</string>
    <string name="password_required">Password is required</string>
    <string name="login_incorrect_email">Incorrect login format</string>
    <string name="login_remember_me">Remember me</string>

    <!--buttons-->
    <string name="login_button">Login</string>
    <string name="clear_button">Clear</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>
    <string name="change_course_button">Change date of the course</string>
    <string name="delete_button">Delete</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="add">Add</string>

    <!--drawer-->
    <string name="drawer_settings_name">Settings</string>
    <string name="drawer_refresh_timetable_data">Download timetable</string>
    <string name="drawer_refresh_settings_data">Download settings data</string>
    <string name="drawer_about_app">About</string>
    <string name="drawer_logout_name">Logout</string>

    <!--timetable-->
    <string name="change_timetable_course_duration">Duration</string>
    <string name="change_timetable_downloading_data">Wait, data downloading..</string>
    <string name="timetable_free_day">You do not have courses for today</string>

    <!--course details-->
    <string name="subject_details_empty_text">Select course to see details</string>

    <!--commons-->
    <string name="spinner_option_choose">Choose:</string>

</resources>
