<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_download_submenu"
        android:title="@string/menu_download_label">
        <menu>
            <group android:menuCategory="secondary">
                <item
                    android:id="@+id/nav_download_timetable"
                    android:icon="@drawable/download_plan_icon"
                    android:title="@string/menu_download_timetable"/>

                <item
                    android:id="@+id/nav_download_settings"
                    android:icon="@drawable/download_plan_icon"
                    android:title="@string/menu_download_settings"/>
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/nav_customize"
        android:icon="@drawable/settings_icon"
        android:title="@string/menu_customize_dashboard"/>
    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/about_app_icon"
        android:title="@string/menu_about_app"/>
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/logout_icon"
        android:title="@string/menu_logout"/>
</menu>