<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/placeCard"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    card_view:cardCornerRadius="1dp"
    card_view:cardElevation="0dp">

    <RelativeLayout
        android:id="@+id/lesson_main_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_margin="5dp"
        android:background="@color/widget_bg_color"
        android:orientation="horizontal"
        android:padding="20dp">

        <LinearLayout
            android:id="@+id/header_widget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:src="@drawable/time_icon"/>

            <TextView
                android:id="@+id/item_lesson_header_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/nearest_lesson"
                android:textColor="@color/text_color"
                android:textSize="20dp"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/navigate_item_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/navigate_icon"/>

        <View
            android:id="@+id/divider"
            style="@style/horizontal_divider"
            android:layout_below="@+id/header_widget"
            android:layout_toLeftOf="@+id/navigate_item_icon"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/divider"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/item_lesson_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="5dp"
                    android:text="SAMPLE LESSON NAME"
                    android:textSize="18dp"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/lesson_item_value_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/localization"/>

                    <TextView
                        android:id="@+id/item_building_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="value"/>

                    <TextView
                        android:id="@+id/item_room_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="value"/>

                    <TextView
                        android:id="@+id/item_lesson_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="value"/>

                    <View
                        style="@style/horizontal_divider"/>

                    <TextView
                        style="@style/lesson_item_value_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/teacher"/>

                    <TextView
                        android:id="@+id/item_teacher_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="value"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</android.support.v7.widget.CardView>